--- a/src/FluentEvents.Benchmarks/FluentEvents.Benchmarks.csproj
+++ b/src/FluentEvents.Benchmarks/FluentEvents.Benchmarks.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.0;net472</TargetFrameworks>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
